[project]
name = "engine-tester"
version = "0.1.0"
description = "HTTP relay application server that processes JSON request files and forwards them to downstream HTTP services."
authors = [
    { name = "engine-tester maintainers" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.31,<0.32",
    "httpx>=0.27,<0.28"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0"
]

[tool.uvicorn]
app = "engine_tester.server:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine_tester*"]
